--- a/modules/server/src/main/resources/templates/node/manage/projectInfo.html
+++ b/modules/server/src/main/resources/templates/node/manage/projectInfo.html
@@ -14,21 +14,33 @@
 <table class="layui-table" id="tab_project" lay-filter="tab_project" style="margin: 0;"></table>
 
 <script type="text/html" id="bar_projects">
+    {{# if(d.runMode!=='File'){ }}
     <a href="javascript:;" class="layui-btn  layui-btn-sm layui-btn-normal" lay-event="manage">控制台</a>
+    {{# } }}
     <a href="javascript:;" class="layui-btn  layui-btn-sm layui-btn-warm" lay-event="update">配置</a>
     <a href="javascript:;" class="layui-btn  layui-btn-sm" lay-event="file">文件</a>
+    {{# if(d.runMode!=='File'){ }}
     <a href="javascript:;" class="layui-btn  layui-btn-sm layui-btn-normal" lay-event="ram">监控</a>
+    {{# } }}
 </script>
 <script type="text/html" id="status_templ">
+    {{# if(d.runMode!=='File'){ }}
     <div title="请到控制台中管理项目">
         <input type="checkbox" id="" disabled name="status" {{# if(d.status){ }}checked{{# } }}
                lay-skin="switch"
                lay-text="运行中|未运行">
     </div>
+    {{# }else{ }}
+    -
+    {{# } }}
 </script>
 
 <script type="text/html" id="port_templ">
+    {{# if(d.runMode!=='File'){ }}
     <span p-Id="{{d.id}}" title="端口：{{ getItemPort(d) }} 进程id:{{ getItemPId(d) }}">{{ getItemPort(d) }}</span>
+    {{# }else{ }}
+    -
+    {{# } }}
 </script>
 
 <script type="text/html" id="toolbarDemo">
