--- a/modules/server/src/main/resources/templates/common/head.html
+++ b/modules/server/src/main/resources/templates/common/head.html
@@ -29,7 +29,7 @@
     <meta content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no" name="viewport">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <link rel="icon" th:href="@{${#strings.defaultString(jpomProxyPath,'')}+'/static/favicon.ico'}"
+    <link rel="icon" th:href="@{${session.jpomProxyPath}+'/static/favicon.ico'}"
           type="image/x-icon"/>
     <link rel="shortcut icon" th:href="@{${session.jpomProxyPath}+'/static/favicon.ico'}"
           type="image/x-icon"/>
