路径跳转问题

--- a/modules/server/src/main/resources/templates/node/manage/projectInfo.html
+++ b/modules/server/src/main/resources/templates/node/manage/projectInfo.html
@@ -181,7 +181,7 @@
                     layer.msg('请先运行程序！');
                     return;
                 }
-                var url = "/node/manage/internal?tag=" + data.id;
+                var url = "./manage/internal?tag=" + data.id;
                 tabChange({
                     id: "ram_" + data.id,
                     url: url,
