新增header 方式获取登录的用户

--- a/modules/server/src/main/resources/templates/node/manage/editProject.html
+++ b/modules/server/src/main/resources/templates/node/manage/editProject.html
@@ -21,7 +21,7 @@
 <div class="layui-container div-project" id="div-project">
 
     <blockquote th:if="${item?.outGivingProject}" class="layui-elem-quote layui-quote-nm">
-        节点分发项目请在节点分发管理页面中修改
+        节点分发项目请在节点分发管理页面中修改、删除
     </blockquote>
 
     <form action="saveProject" method="post" class="layui-form" id="form_project" lay-filter="form_project">
