--- a/modules/server/src/main/resources/templates/node/manage/editProject.html
+++ b/modules/server/src/main/resources/templates/node/manage/editProject.html
@@ -158,6 +158,16 @@
                                th:value="${item?.token}">
                     </div>
                 </div>
+                <div class="layui-inline">
+                    <label class="layui-form-label">jdk选择</label>
+                    <div class="layui-input-block">
+                        <select name="jdkId" lay-filter="jdkId" th:disabled="${item?.outGivingProject}">
+                            <option th:each="itemPath : ${jdkArray}" th:value="${itemPath.id}"
+                                    th:selected="#{item?.jdkId==itemPath.id}" th:text="${itemPath.id}">
+                            </option>
+                        </select>
+                    </div>
+                </div>
             </div>
 
             <div class="layui-form-item" th:if="${item?.get('runCommand')}">
