节点列表显示内存信息

--- a/modules/server/src/main/resources/templates/node/list.html
+++ b/modules/server/src/main/resources/templates/node/list.html
@@ -82,6 +82,8 @@
     var col = [
         {field: 'osName', title: '系统名'},
         {field: 'javaVersion', title: 'Java版本'},
+        {field: 'totalMemory', title: 'JVM总内存'},
+        {field: 'freeMemory', title: 'JVM剩余内存'},
         {field: 'jpomVersion', title: 'Jpom版本'},
         {field: 'javaVirtualCount', title: 'java程序个数'},
         {field: 'count', title: '项目个数'},
