--- a/modules/server/src/main/resources/templates/node/manage/editProject.html
+++ b/modules/server/src/main/resources/templates/node/manage/editProject.html
@@ -163,7 +163,7 @@
                     <div class="layui-input-block">
                         <select name="jdkId" lay-filter="jdkId" th:disabled="${item?.outGivingProject}">
                             <option th:each="itemPath : ${jdkArray}" th:value="${itemPath.id}"
-                                    th:selected="#{item?.jdkId==itemPath.id}" th:text="${itemPath.id}">
+                                    th:selected="#{item?.jdkId==itemPath.id}" th:text="${itemPath.name}">
                             </option>
                         </select>
                     </div>
