--- a/modules/server/src/main/resources/templates/node/manage/editProject.html
+++ b/modules/server/src/main/resources/templates/node/manage/editProject.html
@@ -159,11 +159,13 @@
                     </div>
                 </div>
                 <div class="layui-inline">
-                    <label class="layui-form-label">jdk选择</label>
+                    <label class="layui-form-label">JDK选择</label>
                     <div class="layui-input-block">
                         <select name="jdkId" lay-filter="jdkId" th:disabled="${item?.outGivingProject}">
-                            <option th:each="itemPath : ${jdkArray}" th:value="${itemPath.id}"
-                                    th:selected="#{item?.jdkId==itemPath.id}" th:text="${itemPath.name}">
+                            <option value="" th:selected="#{item==null || item.get('jdkId')==null}">请选择JDK</option>
+                            <option th:each="itemJdk : ${jdkArray}" th:value="${itemJdk.id}"
+                                    th:selected="${item.get('jdkId')!=null &&  item.get('jdkId')==itemJdk.id}"
+                                    th:text="${itemJdk.name}">
                             </option>
                         </select>
                     </div>
