取消保存系统配置显示系统重启

--- a/modules/server/src/main/resources/templates/system/config.html
+++ b/modules/server/src/main/resources/templates/system/config.html
@@ -55,14 +55,16 @@
                 success: function (data) {
                     layer.msg(data.msg);
                     if (200 === data.code) {
-                        top.layer.msg('系统重启中..', {
-                            icon: 16,
-                            shade: 0.2,
-                            time: 1000 * 30,
-                            end: function () {
-                                top.location.reload();
-                            }
-                        });
+                        if (restart) {
+                            top.layer.msg('系统重启中..', {
+                                icon: 16,
+                                shade: 0.2,
+                                time: 1000 * 30,
+                                end: function () {
+                                    top.location.reload();
+                                }
+                            });
+                        }
                     }
                 }
             });
