--- a/modules/server/src/main/resources/templates/user/userInfo.html
+++ b/modules/server/src/main/resources/templates/user/userInfo.html
@@ -9,14 +9,14 @@
         <div class="layui-form-item">
             <label class="layui-form-label">Token</label>
             <div class="layui-input-block">
-                <input type="text" name="token" id="token" required lay-verify="email" readonly
+                <input type="text" name="token" id="token" readonly
                        th:value="${session.user?.getUserMd5Key()}" class="layui-input">
             </div>
         </div>
         <div class="layui-form-item">
             <label class="layui-form-label">邮箱</label>
             <div class="layui-input-block">
-                <input type="text" name="email" id="email" required lay-verify="email"
+                <input type="text" name="email" id="email"
                        placeholder="请输入邮箱" th:value="${session.user?.email}" class="layui-input">
             </div>
         </div>
