节点首页，线程列表分页问题

--- a/modules/server/src/main/resources/templates/node/welcome.html
+++ b/modules/server/src/main/resources/templates/node/welcome.html
@@ -220,6 +220,7 @@
             success: function (data) {
                 if (200 === data.code && data.data) {
                     config.data = data.data;
+                    config.limit = data.data.length;
                     tableRender(config);
                     setTimeout(function () {
                         loadProcessList();
