--- a/modules/server/src/main/resources/templates/outgiving/edit.html
+++ b/modules/server/src/main/resources/templates/outgiving/edit.html
@@ -52,6 +52,20 @@
         </div>
 
 
+        <div class="layui-form-item">
+            <div class="layui-inline">
+                <label class="layui-form-label">分发后</label>
+                <div class="layui-input-block">
+                    <select name="afterOpt" id="afterOpt">
+                        <option value="">请选择分发后的操作</option>
+                        <option th:each="sel : ${afterOpt}" th:value="${sel.code}"
+                                th:selected="${sel.code==item?.afterOpt}" th:text="${sel.desc}">
+                        </option>
+                    </select>
+                </div>
+            </div>
+        </div>
+
         <div class="layui-form-item"
              style="padding-left: 20%;padding-top: 20px;">
             <button class="layui-btn layui-btn-normal" lay-submit lay-filter="form_outgiving">提交
