修复SSH终端管理问题

--- a/modules/server/src/main/resources/templates/node/ssh/terminal.html
+++ b/modules/server/src/main/resources/templates/node/ssh/terminal.html
@@ -34,11 +34,7 @@
                 top.location.reload();
             }
         });
-        if (tail !== null){
-            var url = getSocketHost() + "/ssh?userId=[[${session.user.getUserMd5Key()}]]&" +
-                "sshId=[[${item?.id}]]&nodeId=system&type=ssh&" +
-                "tail=" + tail;
-        } else if (zip !== null){
+        if (zip !== null){
             var url = getSocketHost() + "/ssh?userId=[[${session.user.getUserMd5Key()}]]&" +
                 "sshId=[[${item?.id}]]&nodeId=system&type=ssh&" +
                 "zip=" + zip;
@@ -46,6 +42,10 @@
             var url = getSocketHost() + "/ssh?userId=[[${session.user.getUserMd5Key()}]]&" +
                 "sshId=[[${item?.id}]]&nodeId=system&type=ssh&" +
                 "gz=" + gz;
+        }else {
+            var url = getSocketHost() + "/ssh?userId=[[${session.user.getUserMd5Key()}]]&" +
+                "sshId=[[${item?.id}]]&nodeId=system&type=ssh&" +
+                "tail=" + tail;
         }
         var terminal = document.getElementById("#terminal");
         term = new window.Terminal({
