--- a/modules/server/src/main/resources/templates/node/ssh/edit.html
+++ b/modules/server/src/main/resources/templates/node/ssh/edit.html
@@ -66,6 +66,13 @@
                           class="layui-textarea" th:text="${item?.privateKey}"></textarea>
             </div>
         </div>
+        <script th:if="${item}" th:inline="javascript" type="text/javascript">
+            asyncFn.push(function () {
+                if ([[${item?.connectType}]] === 'PUBKEY') {
+                    $("#privateKey").show();
+                }
+            });
+        </script>
         <div class="layui-form-item">
             <label class="layui-form-label">编码格式</label>
             <div class="layui-input-block">
