--- a/modules/server/src/main/resources/templates/node/manage/projectInfo.html
+++ b/modules/server/src/main/resources/templates/node/manage/projectInfo.html
@@ -15,13 +15,16 @@
 
 <script type="text/html" id="bar_projects">
     {{# if(d.runMode!=='File'){ }}
-    <a href="javascript:;" class="layui-btn  layui-btn-sm layui-btn-normal" lay-event="manage">控制台</a>
+    <div class="layui-btn-group">
+        <a href="javascript:;" class="layui-btn  layui-btn-sm layui-btn-normal" lay-event="manage">控制台</a>
+        <a href="javascript:;" class="layui-btn  layui-btn-sm layui-btn-normal" lay-event="ram">监控</a>
+        {{# if(d.javaCopyItemList && d.javaCopyItemList.length>0){ }}
+        <a href="javascript:;" class="layui-btn  layui-btn-sm layui-btn-normal" lay-event="javaCopy">副本集</a>
+        {{# } }}
+    </div>
     {{# } }}
     <a href="javascript:;" class="layui-btn  layui-btn-sm layui-btn-warm" lay-event="update">配置</a>
     <a href="javascript:;" class="layui-btn  layui-btn-sm" lay-event="file">文件</a>
-    {{# if(d.runMode!=='File'){ }}
-    <a href="javascript:;" class="layui-btn  layui-btn-sm layui-btn-normal" lay-event="ram">监控</a>
-    {{# } }}
 </script>
 <script type="text/html" id="status_templ">
     {{# if(d.runMode!=='File'){ }}
@@ -148,7 +151,7 @@
                     ids: JSON.stringify(ids)
                 },
                 success: function (data) {
-                    if (200 == data.code) {
+                    if (200 === data.code) {
                         cachePortInfo = data.data;
                         for (var key in data.data) {
                             $("span[p-Id='" + key + "']").text(data.data[key].port).attr("title", "端口：" + data.data[key].port + "  进程id:" + data.data[key].pid);
@@ -174,6 +177,14 @@
             } else if ('manage' === event) {
                 // 管理
                 manageApplication(data);
+            } else if ('javaCopy' === event) {
+                layerOpen({
+                    type: 2,
+                    title: data.id + '- 项目副本集',
+                    shade: 0.8,
+                    area: ['80%', '60%'],
+                    content: './projectCopyLList.html?id=' + data.id
+                });
             } else if ('file' === event) {
                 fileManage(data);
             } else if ('ram' === event) {
