项目新建副本集，方便单机快速运行多个副本

--- a/modules/server/src/main/resources/templates/node/manage/javaCopyList.html
+++ b/modules/server/src/main/resources/templates/node/manage/javaCopyList.html
@@ -41,6 +41,7 @@
         {field: 'status', title: '状态', templet: "#status_templ",},
         {field: 'pid', title: '进程id', templet: "#pid_templ"},
         {field: 'port', title: '端口号', templet: "#port_templ"},
+        {field: 'modifyTime', title: '最后修改时间'},
         {field: 'op', title: '操作', align: 'center', toolbar: '#bar_projects', fixed: 'right', width: "30%"}
     ];
 
