--- a/modules/server/src/main/resources/templates/common/head.html
+++ b/modules/server/src/main/resources/templates/common/head.html
@@ -160,7 +160,7 @@
                 maxmin: true,
             };
             $.extend(newData, options);
-            layer.open(newData);
+            return layer.open(newData);
         }
 
         function getSocketHost() {
